tests/test_assets/semantic/invalid/functions/missing_return_empty.cog
return_bad_empty::() -> i32 {
}