tests/test_assets/semantic/invalid/functions/missing_return_empty.expected
semantic error at line 1: non-void function may not return a value
1 semantic error generated.
